PHL-308: Finishing sentiment condition and adding tests.